benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/debug/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_iter3_error.log
=== Verification Error - Iteration 3 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes.rs
Time: 2025-09-15 19:27:59

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error: invalid suffix `nat` for number literal
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:36:17
   |
36 |   let mut res = 0nat;
   |                 ^^^^ invalid suffix `nat`
   |
   = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: invalid suffix `nat` for number literal
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:37:17
   |
37 |   let mut pow = 1nat;
   |                 ^^^^ invalid suffix `nat`
   |
   = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: invalid suffix `nat` for number literal
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:50:17
   |
50 |     pow = pow * 2nat;
   |                 ^^^^ invalid suffix `nat`
   |
   = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: invalid suffix `nat` for number literal
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:61:11
   |
61 |   if n == 0nat {
   |           ^^^^ invalid suffix `nat`
   |
   = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: invalid suffix `nat` for number literal
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:66:37
   |
66 |     let mut res = nat_to_binary(n / 2nat);
   |                                     ^^^^ invalid suffix `nat`
   |
   = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: invalid suffix `nat` for number literal
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:67:12
   |
67 |     if n % 2nat == 0nat {
   |            ^^^^ invalid suffix `nat`
   |
   = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: invalid suffix `nat` for number literal
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:67:20
   |
67 |     if n % 2nat == 0nat {
   |                    ^^^^ invalid suffix `nat`
   |
   = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:28:48
   |
28 |   if exp == 0nat { 1nat } else { 2nat * power2(exp - 1nat) }
   |                                         ------ ^^^^^^^^^^ expected `nat`, found `int`
   |                                         |
   |                                         arguments to this function are incorrect
   |
note: function defined here
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:25:9
   |
25 | spec fn power2(exp: nat) -> nat
   |         ^^^^^^ --------

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0308`.

--------------------------------------------------------------------------------

Additional Output:
error: invalid suffix `nat` for number literal
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:36:17
   |
36 |   let mut res = 0nat;
   |                 ^^^^ invalid suffix `nat`
   |
   = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: invalid suffix `nat` for number literal
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:37:17
   |
37 |   let mut pow = 1nat;
   |                 ^^^^ invalid suffix `nat`
   |
   = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: invalid suffix `nat` for number literal
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:50:17
   |
50 |     pow = pow * 2nat;
   |                 ^^^^ invalid suffix `nat`
   |
   = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: invalid suffix `nat` for number literal
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:61:11
   |
61 |   if n == 0nat {
   |           ^^^^ invalid suffix `nat`
   |
   = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: invalid suffix `nat` for number literal
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:66:37
   |
66 |     let mut res = nat_to_binary(n / 2nat);
   |                                     ^^^^ invalid suffix `nat`
   |
   = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: invalid suffix `nat` for number literal
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:67:12
   |
67 |     if n % 2nat == 0nat {
   |            ^^^^ invalid suffix `nat`
   |
   = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: invalid suffix `nat` for number literal
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:67:20
   |
67 |     if n % 2nat == 0nat {
   |                    ^^^^ invalid suffix `nat`
   |
   = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:28:48
   |
28 |   if exp == 0nat { 1nat } else { 2nat * power2(exp - 1nat) }
   |                                         ------ ^^^^^^^^^^ expected `nat`, found `int`
   |                                         |
   |                                         arguments to this function are incorrect
   |
note: function defined here
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:25:9
   |
25 | spec fn power2(exp: nat) -> nat
   |         ^^^^^^ --------

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0308`.
